v0.46:
	There is now an option to set the minimum distance between another town's homeblocks (default is 0 ie no change).
	Fixed a concurrent modification bug with unclaiming all townblocks in a town.
	Mob removal now runs in the game thread (possible slow down, increase MOB_REMOVAL_SPEED variable in config if you find a new slowdown after updating).
	Added torches (id=50) to wild ignore ids default.
	Modified the onDamage call.
v0.47:
	Changed the debug output for when permissions are checked against as it might be causing confusing.
	Quick fix for /tc and /nc with no msg.
	Ingame Resident/Town/Nation/Global messages are now sent to it's own log file. It's nature is to start a new log every time the plugin is enabled. Due to the nature of the backup system, it will now keep the log of what went on during that time period.
	Compiled against Permissions 2.5, to see if it makes any difference.
	Added maximum plots per resident globally (default=1000). Anyone trying to claim more than this will get an error.
	Added default permissions for when a new town/resident is registered.
	Mayor/Assistant can now edit plots within the town, even if the plot owner denies everything.
	Fixed outsiderSwitch permission. (Thanks PixelEater)
	wartime_death_price and death_price were renamed to price_death_wartime and price_death.
	Testing a /townyadmin unclaim command. Untested, use at your own risk.
v0.48:
	Fix Essentials compatibility.
v0.49:
	Towny now caches the last block location a player was at.
v0.50:
	Fixed towny being a pimp and taking over every other plugins command.
v0.51:
	Fixed some concurrent errors during taxation.
v0.52:
	Switch perms were outputting incorrectly.
	Item use are now included in item ids usable in the wild.
	The permission, towny.wild.block.[item id] is now towny.wild.block.[item id].[action], where [action] is build, destroy, switch, item_use. So just add .* onto the end to function normally.
	